--- a/landingpage.html
+++ b/landingpage.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>BEST WEBSITE AND AMAZING NAME HERE</h1>
     <section>
-        <p>Hello World</p>
+        <p>"BEST SLOGAN EVER"</p>
     </section>
 </body>
 </html>
