--- a/landingpage.html
+++ b/landingpage.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Best and most amzing website</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1 style>BEST WEBSITE AND AMAZING NAME HERE</h1>
     <section>
-        <p>Hello World</p>
+        <p>"BEST SLOGAN EVER"</p>
     </section>
 </body>
 </html>
