--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -7,7 +7,8 @@
     <title>Best and most amzing website</title>
 </head>
 <body>
-    <h1 style>BEST WEBSITE AND AMAZING NAME HERE</h1>
+    <WEBSITE AND AMAZING NAME HERE</h1>
+
     <section>
         <p>"BEST SLOGAN EVER"</p>
     </section>
