--- a/results page/develop/index.html
+++ b/results page/develop/index.html
@@ -4,17 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/
+    materialize.min.css">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <header class="search-bar" >placeholder</header>
-    <h1 class="artist-options">Artist/Event</h1>
-    <h1 class="artist-options">Artist/Event</h1>
-    <h1 class="artist-options">Artist/Event</h1>
-    <h1 class="artist-options">Artist/Event</h1>
-    <div id="area-map"></div>
+    <header>
+            <nav>
+                <ul class="nav-list">
+                    <li><a href="default.asp">Home</a></li>
+                </ul>
+            </nav>
+    </header>
+    <main>
+        <div>
+            <h1 class="search-bar" >placeholder</header>
+        </div>
+            <div class="event-container">
+                <h2 class="artist-options" id="event-1">Artist/Event</h2>
+            </div>
+            <div class="event-container">
+                <h2 class="artist-options" id="event-2">Artist/Event</h2>
+            </div>
+            <div class="event-container">
+                <h2 class="artist-options" id="event-3">Artist/Event</h2>
+            </div>
+            <div class="event-container">
+                <h2 class="artist-options" id="event-4">Artist/Event</h2>
+            </div>
+            <div>
+                <img src="https://via.placeholder.com/500"id="area-map"></img>
+            </div>
+    </main>
+    
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
+    <script src="./js/script.js"></script>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 </html>
