updates to html, css, and js

--- a/details/index.html
+++ b/details/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <button href=# id="homeBtn">Take me home!</button>
+        <button href="#" id="homeBtn">Take me home!</button>
         <h1 id="artist-name">Artist Name</h1>
     </header>
 
