--- a/Landing Page/landingpage.html
+++ b/Landing Page/landingpage.html
@@ -1,70 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/CSS/landingpage.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"/>
-    <title>Best and most amazing website</title>
-</head>
-<body>
-    <!-- ALIGN HOME button top left -->
-    <div class="hero-image" style="text-align:center; background-image:url(./Assets/images/thegorge.jpg);background-repeat: no-repeat; background-size: cover;">
-        <div class="hero-text">
-          <h1 style="color:whitesmoke; line-height: 300px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">BEST PROJECT TITLE</h1>
-          <p style="text-align:center;color:whitesmoke">"IM INSPIRED TO LISTEN TO MUSIC WHEN I READ THIS"</p>
-            <button class="home" style="line-height: 35px;"><a href="#">HOME</a></button>
-    </div>
-</div>
 
-<br>
-        <!-- 2 search bars with user input: date range and location/city/zip code -->
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+  <link rel="stylesheet" href="./Assets/CSS/landingpage.css">
+  <title>Best and most amazing website</title>
+</head>
+
+<body>
+  <div class="show" id="main-content">
+    <div class="hero-image"
+      style="text-align:center; background-image:url(./Assets/images/thegorge.jpg);background-repeat: no-repeat; background-size: cover;">
+      <div class="hero-text">
+        <h1
+          style="color:whitesmoke; line-height: 300px; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
+          BEST PROJECT TITLE</h1>
+
+        <p style="text-align:center;color:whitesmoke">"IM INSPIRED TO LISTEN TO MUSIC WHEN I READ THIS"</p>
+
+        <input type="button" value="HOME" onClick="window.location.reload(true)"
+          style="line-height:50px; position: fixed; top:0; left:0"></button>
+
+      </div>
+    </div>
+
+    <br>
+
     <form>
-        <section class="search" style= "display: inline-flex; flex-direction: row; width: 100%; align-items: center; font-weight: bolder; font-size: 20px;">
-        When:<input class="first-search"type="date-range" id="date-range" style="display:flex" placeholder="date-range">
-        Where:<input class="first-search"type="text"id="location"style="display:flex; margin-left: 30px" placeholder="location/city/zip code">
-        <button style="display:inline-flex";>Search</button>  
-        </section>
+      <section class="search"
+        style="display: inline-flex; flex-direction: row; width: 100%; align-items: center; font-weight: bolder; font-size: 20px; color: whitesmoke">
+
+        When:<input class="first-search" type="text" id="date-range"
+          style="margin-left:15px; display:flex; color: whitesmoke" ; placeholder="   Date Range" ; margin-left="15px">
+
+        Where:<input class="first-search" type="text" id="location"
+          style="margin-left: 15px; display:flex; color:whitesmoke" placeholder="   location/city/zip code">
+
+        <button id="searchBtn">Search</button>
+
+      </section>
     </form>
 
     <!-- dropdowns for filter -->
-<!-- Dropdown Trigger -->
-<section class="filters" style="display:flex; justify-content:space-evenly; margin-top: 50px;">
-<a class='dropdown-trigger btn' href='#' data-target='dropdown'>Filter Price!</a>
+ 
+    <section class="filters" style="display:flex; justify-content:space-evenly; margin-top: 50px;">
+      <a class='dropdown-trigger btn' href='#' data-target='dropdown'>Filter Price!</a>
 
-<!-- Dropdown Structure -->
-<ul id='dropdown' class='dropdown-content'>
-  <li><a href="#!">Free-$100</a></li>
-  <li><a href="#!">$101-$300</a></li> 
-  <li><a href="#!">Can you really put a price on experiences?</a></li>
-</ul>
+      <!-- Dropdown Structure -->
+      <ul id='dropdown' class='dropdown-content'>
+        <li><a href="#!">Free-$100</a></li>
+        <li><a href="#!">$101-$300</a></li>
+        <li><a href="#!">Can you really put a price on experiences?</a></li>
+      </ul>
 
-<a class='dropdown-trigger btn' href='#' data-target='dropdown-genre'>Filter Genre!</a>
-<!-- Dropdown Structure -->
-<ul id='dropdown-genre' class='dropdown-content'>
-  <li><a href="#!">Rock n' Roll</a></li>
-  <li><a href="#!">Hip-Hop</a></li> 
-  <li><a href="#!">Kpop</a></li>
-  <li><a href="#!">More Genres</a></li>
-</ul>
+      <a class='dropdown-trigger btn' href='#' data-target='dropdown-genre'>Filter Genre!</a>
+      <!-- Dropdown Structure -->
+      <ul id='dropdown-genre' class='dropdown-content'>
+        <li><a href="#!">Rock n' Roll</a></li>
+        <li><a href="#!">Hip-Hop</a></li>
+        <li><a href="#!">Kpop</a></li>
+        <li><a href="#!">More Genres</a></li>
+      </ul>
 
-<a class='dropdown-trigger btn' href='#' data-target='dropdown-other'>Filter Other Stuff!</a>
-<!-- Dropdown Structure -->
-<ul id='dropdown-other' class='dropdown-content'>
-  <li><a href="#!">Chair Count</a></li>
-  <li><a href="#!">Available Food</a></li> 
-  <li><a href="#!">If Chris Le will be there</a></li>
-</ul>
+      <a class='dropdown-trigger btn' href='#' data-target='dropdown-other'>Filter Other Stuff!</a>
+      <!-- Dropdown Structure -->
+      <ul id='dropdown-other' class='dropdown-content'>
+        <li><a href="#!">Chair Count</a></li>
+        <li><a href="#!">Available Food</a></li>
+        <li><a href="#!">If Chris Le will be there</a></li>
+      </ul>
 
-</section>
+    </section>
 
+    </section>
 
-
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="./Assets/JS/Landingpage.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+   
+    <script src="./Assets/JS/Landingpage.js"></script>
 </body>
+
 </html>
