wiki api added doing more work on extract

--- a/details/index.html
+++ b/details/index.html
@@ -33,15 +33,13 @@
                       <img src="https://images.squarespace-cdn.com/content/v1/5a4fb547b0786969790f230b/1516399639303-CVW76S1KDPBKPGPV9DC0/Wikipedia+Banner">
                       <span class="card-title"></span>
                     </div>
-                    <div class="card-content">
-                      <p id="article"> 
+                    <div class="card-content" id="wiki-blurb">
+    
                         <!-- <iframe src="https://en.wikipedia.org/w/index.php?title=Bjork&printable=yes"></iframe> -->
-
-                        Wikipedia API will fill in blurb here, also the box will expand with the added text.</div>
-                      </p>
-                    <div class="card-action">
-                      <a href="#">Read more!</a>
-                      <!-- ^ this will link to wikipedia directly -->
+<!-- 
+                        Wikipedia API will fill in blurb here, also the box will expand with the added text. -->
+                      </div>
+                    <div class="card-action" id="read-more">
                     </div>
                   </div>
                 </div>
