--- a/mvp/index.html
+++ b/mvp/index.html
@@ -57,18 +57,60 @@
         </div>
     </div>
     <div>
-      <input type="button" value="Search" onclick="codeAddress()">
+      <input type="button" value="Search" onclick="showContent(); codeAddress();">
     </div>
 </div>
 
 <!-- RESULT PAGE -->
 <div class = "container row"> 
 
-  <div class="col s6 push-s4" id="map"></div>
-  <div class="col s12 center-align">
-    <div id="events"></div>
-  </div>
+
 </div>
+<div class="flex-container">
+  <div class="flex-child" id="">
+    <div class="row">
+      <div class="col s6 m7">
+        <div class="card" id="card">
+          <div class="sidebar">
+              <div class ="eventImage" id="eventImage1"></div>
+              <h3 id="eventDate1" class="date"></h3>
+          </div>
+          <div class="main-content">
+              <h2 id="eventName1" class="event-name"></h2>
+              <p id = "eventLocation1" class="location"></p>
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="sidebar">
+              <div class ="eventImage" id="eventImage2"></div>
+              <h3 id="eventDate2" class="date"></h3>
+          </div>
+          <div class="main-content">
+              <h2 id="eventName2" class="event-name"></h2>
+              <p id = "eventLocation2" class="location"></p>
+          </div>
+        </div>
+        <div class="card" id="card">
+          <div class="sidebar">
+              <div class ="eventImage" id="eventImage3"></div>
+              <h3 id="eventDate3" class="date"></h3>
+          </div>
+          <div class="main-content">
+              <h2 id="eventName3" class="event-name"></h2>
+              <p id = "eventLocation3" class="location"></p>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <div class="flex-child" id="">
+      <div class="row">
+        <div class="card col s6 offset-s6 m7 flex-child" id="cardMap"> 
+          <div id="map"></div>
+        </div>
+      </div>
+    </div>
+</div>
+
 
 <script src="script.js"></script>
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVeiXPohR3WJKh94VpZEIbNr4wjAqPfoQ&callback=initMap"></script>
