--- a/mvp/index.html
+++ b/mvp/index.html
@@ -62,14 +62,11 @@
 </div>
 
 <!-- RESULT PAGE -->
-<div class = "container row"> 
-
-
-</div>
 <div class="flex-container">
   <div class="flex-child" id="">
     <div class="row">
       <div class="col s6 m7">
+
         <div class="card" id="card">
           <div class="sidebar">
               <div class ="eventImage" id="eventImage1"></div>
@@ -80,35 +77,51 @@
               <p id = "eventLocation1" class="location"></p>
           </div>
         </div>
-        <div class="card" id="card">
-          <div class="sidebar">
-              <div class ="eventImage" id="eventImage2"></div>
-              <h3 id="eventDate2" class="date"></h3>
-          </div>
-          <div class="main-content">
-              <h2 id="eventName2" class="event-name"></h2>
-              <p id = "eventLocation2" class="location"></p>
-          </div>
-        </div>
-        <div class="card" id="card">
-          <div class="sidebar">
-              <div class ="eventImage" id="eventImage3"></div>
-              <h3 id="eventDate3" class="date"></h3>
-          </div>
-          <div class="main-content">
-              <h2 id="eventName3" class="event-name"></h2>
-              <p id = "eventLocation3" class="location"></p>
-          </div>
-        </div>
-      </div>
-    </div> 
-    <div class="flex-child" id="">
-      <div class="row">
-        <div class="card col s6 offset-s6 m7 flex-child" id="cardMap"> 
-          <div id="map"></div>
-        </div>
       </div>
     </div>
+  </div> 
+
+  <div class="flex-child" id="">
+    <div class="row">
+      <div class="card col s6 offset-s6 m7 flex-child" id="cardMap" style="display:none;"> 
+        <div id="map"></div>
+      </div>
+    </div>
+  </div>
+
+<!--
+  <div class="flex-child" id="wikipedia-youtube">
+    <div class="row">
+        <div class="col s12 m7">
+          <div class="card">
+            <div class="card-image">
+              <img src="https://images.squarespace-cdn.com/content/v1/5a4fb547b0786969790f230b/1516399639303-CVW76S1KDPBKPGPV9DC0/Wikipedia+Banner">
+              <span class="card-title"></span>
+            </div>
+            <div class="card-content" id="wiki-blurb">
+            </div>
+            <div class="card-action" id="read-more">
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+
+  <div class="flex-child" id="youtube">
+    <div class="col s12 m7">
+        <div class="card">
+            <h4>Hear their hits!</h4>
+            <div class="card-image">
+                <span class="card-title"></span>
+            </div>
+            <div class="youtube-container">
+            </div>
+            <div class="card-action" id="watch-more">
+            </div>
+        </div>
+      </div>
+  </div>
+-->
 </div>
 
 
