--- a/details/index.html
+++ b/details/index.html
@@ -50,6 +50,7 @@
                         <span class="card-title"></span>
                     </div>
                     <div class="youtube-container">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/9ipCKIxdHTs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="card-action" id="watch-more">
                     </div>
