--- a/details/index.html
+++ b/details/index.html
@@ -63,3 +63,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
+
+
+<div class="card" id="card">
+  <div class="sidebar">
+      <div id="eventImage"></div>
+      <h3 id="eventDate" class="date"></h3>
+  </div>
+  <div class="main-content">
+      <h2 id="eventName" class="event-name"></h2>
+      <p id = "eventLocation" class="location"></p>
+  </div>
+</div>
+</div>
