Added commits to html/js

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <div class="hero-text">
     <h2>Discovery Guru</h2>
   </div>
+
 </div>
-
+<!-- User Input (Date + Search) and Button -->
 <div class = "container row"> 
-
     <form class="col s4">
       <div class="row">
         <div class="input-field col s12">
@@ -62,6 +62,7 @@
     </div>
 </div>
 
+<!-- Flex Container + Flex Child of Cards -->
 <div class="flex-container col">
 
   <div class="flex-child col s12" id="googleMap">
